--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^7.0.4",
     "express-session": "^1.17.3",
     "hbs": "^4.2.0",
+    "jquery": "^3.6.4",
     "node": "^19.8.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
