--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ DB_USER=postgres
 DB_PASSWORD=12345
 DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=puntos
+DB_DATABASE=diurno
 
 SESSION_SECRET=secret
