--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hbs": "^4.2.0",
     "jquery": "^3.6.4",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "node": "^19.8.1",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
