--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
-    "pg-promise": "^11.4.3"
+    "pg-promise": "^11.4.3",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.5"
   }
 }
